Closed Bug 1290749 Opened 10 years ago Closed 10 years ago

Skip plugin content plugin of no URI specified

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(firefox48 wontfix, firefox49 fixed, firefox50 fixed, firefox51 fixed)

RESOLVED FIXED
mozilla51
Tracking Status
firefox48 --- wontfix
firefox49 --- fixed
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: tschneider, Assigned: tschneider)

References

Details

Attachments

(1 file)

If no URI is given for plugin content (this happens mostly in tests), skip content blocking check.
Blocks: 1275591
Attachment #8776400 - Flags: review?(francois)
Attachment #8776400 - Flags: review?(francois) → review+
Assignee: nobody → tschneider
Status: NEW → ASSIGNED
Keywords: checkin-needed
Pushed by cpeterson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/0f66d9a52316 Skip plugin content plugin of no URI specified. r=francois
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8776400 [details] [diff] [review] Skip plugin content blocking if no URI specified Approval Request Comment [Feature/regressing bug #]: Non-essential plugin blocking: reduces plugin crash rate by 5-10% [User impact if declined]: more plugin crashes/hangs [Describe test coverage new/current, TreeHerder]: tests already landed, were broken with e10s and this patch fixes [Risks and why]: Pretty low risk: a little refactoring, and plugins are never 100% risk-free, but [String/UUID change made/needed]: None This needs to land along with bug 1275591 which actually turns the feature on.
Attachment #8776400 - Flags: approval-mozilla-beta?
Attachment #8776400 - Flags: approval-mozilla-aurora?
Comment on attachment 8776400 [details] [diff] [review] Skip plugin content blocking if no URI specified Let's bring this to aurora since the patch from bug 1275591 is already on 50.
Attachment #8776400 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8776400 [details] [diff] [review] Skip plugin content blocking if no URI specified Bring down plugin crashes, let's take this on beta. Once it lands we can also land the patch from bug 1275591.
Attachment #8776400 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: