Bug 1290749 - Skip plugin content plugin of no URI specified. r=francois a=lizzard